kubernetes/talos/proxies/internal/internal/nodes/tegridy/endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: tegridy
subsets:
  - addresses:
      - ip: 192.168.3.23
    ports:
      - port: 8006
        name: http
